--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "repository": "https://github.com/bobbyjnichols/MuniMap.git",
   "author": "Robert Nichols",
-  "license": "GNU",
+  "license": "GPL-3.0-or-later",
   "private": false,
   "devDependencies": {
     "autoprefixer": "^7.1.3",
@@ -31,9 +31,13 @@
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
     "postcss-flexbugs-fixes": "^3.2.0",
-    "run-sequence": "^1.2.1"
+    "run-sequence": "^1.2.1",
+    "streamqueue": "^1.1.2"
   },
   "engines": {
     "yarn": ">= 1.0.0"
+  },
+  "dependencies": {
+    "d3": "^4.12.2"
   }
 }
