--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-connect": "^4.1.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-jshint": "^2.0.1",
+    "gulp-ng-constant": "^1.2.0",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
@@ -38,6 +39,9 @@
     "yarn": ">= 1.0.0"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.12",
+    "angular": "^1.6.8",
+    "angular-resource": "^1.6.8",
     "d3": "^4.12.2"
   }
 }
